--- a/deployment/udaconnect-core.yaml
+++ b/deployment/udaconnect-core.yaml
@@ -2,37 +2,37 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: udaconnect-api
-  name: udaconnect-api
+    service: udaconnect-core
+  name: udaconnect-core
 spec:
   ports:
-  - name: "5000"
-    port: 5000
-    targetPort: 5000
-    nodePort: 30001
+  - name: "5005"
+    port: 5005
+    targetPort: 5005
+    nodePort: 30002
   selector:
-    service: udaconnect-api
+    service: udaconnect-core
   type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: udaconnect-api
-  name: udaconnect-api
+    service: udaconnect-core
+  name: udaconnect-core
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: udaconnect-api
+      service: udaconnect-core
   template:
     metadata:
       labels:
-        service: udaconnect-api
+        service: udaconnect-core
     spec:
       containers:
-      - image: tpso/udaconnect-api:latest
-        name: udaconnect-api
+      - image: tpso/udaconnect-core:latest
+        name: udaconnect-core
         imagePullPolicy: Always
         env:
         - name: DB_USERNAME
@@ -40,7 +40,7 @@ spec:
             configMapKeyRef:
               name: db-env
               key: DB_USERNAME
-        - name: DB_PASSWORD
+        - name: DB_PASSWORD 
           valueFrom:
             secretKeyRef:
               name: db-secret
@@ -60,14 +60,4 @@ spec:
             configMapKeyRef:
               name: db-env
               key: DB_PORT
-        - name: CORE_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: core-env
-              key: CORE_HOST
-        - name: CORE_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: core-env
-              key: CORE_PORT
       restartPolicy: Always
