--- a/deployment/kafka-configmap.yaml
+++ b/deployment/kafka-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 data:
   KAFKA_SERVER: "kafka-cluster"
-  KAFKA_TOPIC: "testing"
+  KAFKA_TOPIC: "create-new-location"
+  KAFKA_CONSUMER_GROUP: "location-consumer"
 metadata:
   name: kafka-env
